<resources>
    <string name="app_name">Carlog</string>

    <!--Activity login-->
    <string name="txt_ActivityLogin_Welcome">Welcome to Carlog</string>
    <string name="btn_ActivityLogin_Login">Login</string>
    <string name="btn_ActivityLogin_SignUp">Sign UP</string>

    <!--Activity register vehicle-->
    <string name="txt_ActivityRegisterVehicle_LicencePlate">Enter your licence plate</string>
    <string name="edit_ActivityRegisterVehicle_LicencePlate">Licence Plate</string>
    <string name="btn_Back">Back</string>

    <!--Activity registered vehicles-->
    <string name="txt_ActivityRegisteredVehicles_VehicleName">Vehicle Name</string>

    <!--Activity user interface-->
    <string name="btn_ActivityUserInterface_YourVehicles">Your Vehicles</string>
    <string name="btn_ActivityUserInterface_YourLogs">Your Logs</string>
    <string name="btn_ActivityUserInterface_RegisterVehicle">Register Vehicle</string>
    <string name="btn_ActivityUserInterface_RegisteredVehicles">Registered Vehicles</string>
    <string name="btn_ActivityUserInterface_Logout">Logout</string>

    <!--Activity vehicle details-->
    <string name="txt_ActivityVehicleDetails_Vehicle_Name">Vehicle name</string>
    <string name="btn_ActivityVehicleDetails_Back">Back</string>
    <string name="txt_ActivityVehicleDetails_Date">Date</string>
    <string name="txt_ActivityVehicleDetails_Name">Name</string>

    <!--Activity vehicle log-->

    <!--Activity your logs-->
    <string name="txt_ActivityYourLogs_YourLogs">Your logs</string>

    <string name="txt_ActivityYourLogs_Date">Date</string>
    <string name="txt_ActivityYourLogs_Name">Name</string>

    <!--Activity your logs fragment list-->
    <string name="txt_ActivityYourLogsFragList_YourLogs">Your Logs</string>
    <string name="txt_ActivityYourLogsFragList_LogDate">Log date</string>

    <!--Activity your logs fragment details-->
    <string name="txt_ActivityYourLogsFragDetails_LogName">Log name</string>
    <string name="txt_ActivityYourLogsFragDetails_LogDate">Log date</string>
    <string name="txt_ActivityYourLogsFragDetails_LogDistance">Log distance</string>
    <string name="txt_ActivityYourLogsFragDetails_LogTime">Log time</string>
    <string name="txt_ActivityYourLogsFragDetails_Log">Log</string>
    <string name="txt_ActivityYourLogsFragDetails_LogDescription">Log description...</string>
    <string name="txt_ActivityYourLogsFragDetails_GoogleMaps">Google maps</string>

    <!--Activity your vehicles-->
    <string name="txt_ActivityYourVehicles_VehicleName">Vehicle Name</string>
    <string name="btn_ActivityYourVehicles_Back">Back</string>

    <!--Activity all list item -->
    <string name="img_ActivityAllListItem_ImgOfVehicle">Img of vehicle</string>
    <string name="Loginbtn">Login</string>
    <string name="welcome">Welcome To Carlog</string>
    <string name="LogoutBtn">Logout</string>


    <string name="RegisterVHAddBtn">Add Vehicle</string>
    <string name="RegisterVehicleTitletxt">Register your vehicle</string>
    <string name="RegisterVehicleInputFieldHeader">Enter vehicles registration plate: </string>
    <string name="RegisterVehicleInputHint">Registration plate</string>
    <string name="RegisterVehicleImageHeader">Image of Vehicle</string>
    <string name="RegisterVehicleUploadBtn">Upload image</string>
    <string name="UI_RegisterVehicleBtn">Register Vehicle</string>
    <string name="CancelBtn">Cancel</string>
    <string name="VehicleAlreadyRegisteredString">The vehicle is already registered</string>
    <string name="EnterReqNrString">Please enter a vehicle registration nr.</string>
    <string name="UI_RegisteredVehiclesBtn">Registered Vehicles</string>
    <string name="txt_ActivityRegisteredVehicles_OwnerName">Owner Name</string>
    <string name="txtWriteLog">Write Log</string>
    <string name="btn_start">Start</string>
    <string name="btn_Stop">Stop</string>
    <string name="btn_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_new" >New</string>
    <string name="TxtName">Name</string>
    <string name="TxtDate">Date</string>
    <string name="TxtDistance">Distance</string>
    <string name="TxtDuration">Duration</string>
    <string name="TxtLog">Log</string>
    <string name="TxtLogText">Log</string>
    <string name="RegisterVechicleNoInput">Please enter a vehicle registration number!</string>
    <string name="RegisterVehicleTooLongInput">The registration number should 7 characters.</string>
    <string name="RegisterVehicleSelectImageADOption1">Take Photo</string>
    <string name="RegisterVehicleSelectImageADOption2">Choose from Gallery</string>
    <string name="RegisterVehicleSelectImageADOption3">Cancel</string>
    <string name="RegisterVehicleSelectImageTitle">Add Photo!</string>
</resources>