<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterVehicleActivity">

    <Button
        android:id="@+id/RegisterVHAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/RegisterVHAddBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/RegisterVehicleTitletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/RegisterVehicleTitletxt"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/RegisterVehicleInputField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/RegisterVehicleInputHint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterVehicleTitletxt" />

    <TextView
        android:id="@+id/RegisterVehicleInputHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterVehicleInputFieldHeader"
        app:layout_constraintBottom_toTopOf="@+id/RegisterVehicleInputField"
        app:layout_constraintStart_toStartOf="@+id/RegisterVehicleInputField" />

    <ImageView
        android:id="@+id/RegisterVehicleImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterVehicleUploadBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterVehicleInputField"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/RegisterVehicleImageHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RegisterVehicleImageHeader"
        app:layout_constraintBottom_toTopOf="@+id/RegisterVehicleImage"
        app:layout_constraintStart_toStartOf="@+id/RegisterVehicleImage" />

    <Button
        android:id="@+id/RegisterVehicleUploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/RegisterVehicleUploadBtn"
        app:layout_constraintBottom_toTopOf="@+id/RegisterVHAddBtn"
        app:layout_constraintEnd_toEndOf="@+id/RegisterVehicleImage"
        app:layout_constraintStart_toStartOf="@+id/RegisterVehicleImage" />

    <Button
        android:id="@+id/RegisterVehicleCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/CancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>