<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.YourLogsDetailsFragment">

    <ImageView
        android:id="@+id/imgYLFragDVehicle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_ActivityAllListItem_ImgOfVehicle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtYLFragDName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imgYLFragDVehicle"
        android:layout_toRightOf="@+id/imgYLFragDVehicle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogName" />

    <TextView
        android:id="@+id/txtYLFragDDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtYLFragDName"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imgYLFragDVehicle"
        android:layout_toRightOf="@+id/imgYLFragDVehicle"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogDate" />

    <TextView
        android:id="@+id/txtYLFragDDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@+id/txtYLFragDName"
        android:layout_toRightOf="@+id/txtYLFragDName"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogDistance" />

    <TextView
        android:id="@+id/txtYLFragDTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtYLFragDDistance"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogTime" />

    <TextView
        android:id="@+id/txtYLFragDLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgYLFragDVehicle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="73dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_Log" />

    <TextView
        android:id="@+id/txtYLFragDLogDescription"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_above="@+id/mapYLFragDGoogle"
        android:layout_below="@+id/txtYLFragDLog"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogDescription" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapYLFragDGoogle"
        android:layout_width="wrap_content"
        android:layout_height="325dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/txt_ActivityYourLogsFragDetails_GoogleMaps" />

</RelativeLayout>