<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MapsActivity">

    <ImageView
        android:id="@+id/imgVDFragDVehicle"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_ActivityAllListItem_ImgOfVehicle"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtVDFragDUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imgVDFragDVehicle"
        android:layout_toRightOf="@+id/imgVDFragDVehicle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/txtVDFragDDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVDFragDUser"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@+id/imgVDFragDVehicle"
        android:layout_toRightOf="@+id/imgVDFragDVehicle"/>

    <TextView
        android:id="@+id/txtVDFragDDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogDistance" />

    <TextView
        android:id="@+id/txtVDFragDTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtVDFragDDistance"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogTime" />

    <TextView
        android:id="@+id/txtVDFragDLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtVDFragDLogDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/txtVDFragDLogDescription"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_above="@+id/mapVDFragDGoogle"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:text="@string/txt_ActivityYourLogsFragDetails_LogDescription" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapVDFragDGoogle"
        android:layout_width="wrap_content"
        android:layout_height="325dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>